frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: sveltekit
        image: njt1980/frontendsveltekit:v5
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
